2009-04-25  Lars Hartmann  <lars (at) chaotika (dot) org>

	* test/valgrind-wrapper: simplified and cleaned up.

2009-04-20  Lars Hartmann  <lars (at) chaotika (dot) org>

	Fixed several lint warnings:
	* src/liblpatom.c: fixed.
	* src/liblpxpak.c: fixed.
	* src/liblparchives.c: fixed.

2009-03-31  Lars Hartmann  <lars (at) chaotika (dot) org>

	* include/archives.h: extended.

2009-03-28  Lars Hartmann  <lars (at) chaotika (dot) org>

	* test/Makefile.am: simplified some tests and added
	valgrind-wrapper to EXTRA_DIST.

2009-03-27  Lars Hartmann  <lars (at) chaotika (dot) org>

	Added valgrind test-support:
	* test/valgrind-wrapper: Added wrapper script for calling tests
	with valgrind.
	* configure.ac: Added --enable-valgrind switch and some checks.
	* test/Makefile.am: Replaced libtool linking by static
	linking(required for valgrind to work).
	Check if --enable-valgrind was given to configure and start tests
	through valgrind-wrapper if so.

	Added support for archives:
	* test/Makefile.am: added targets for test/04_lparchives.
	* test/04_lparchives.tbz2: added.
	* test/04_lparchives.txt: added.
	* test/04_lparchives.c: added.
	* src/liblparchives.c: added.
	* include/archives.h: added.

	Rewrote the License for text documents:
	* doc/binary_packages.txt: updated license.
	* doc/xpak.txt: updated license.
	* doc/xpak.5: updated license.

	* replace/strndup.c: added compiler checks.

2009-03-26  Lars Hartmann  <lars (at) chaotika (dot) org>

	Moved compiler checks from common.h into the headers and removed
	common.h:
	* include/Makefile.am (header_HEADERS): removed common.h from the
	list headers.
	* src/liblpxpak.c: added c++ compiler checks.
	* src/liblputil.c: added c++ compiler checks.
	* src/liblpatom.c: added c++ compiler checks.
	* include/xpak.h: added c++ compiler checks.  removed include of
	common.h
	* include/util.h: added c++ compiler checks.  removed include of
	common.h
	* include/atom.h: added c++ compiler checks.  removed include of
	common.h